# golang/docs/swagger.json
@@ -584,9 +584,9 @@
                 "summary": "更新应用",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "应用ID",
-                        "name": "app_id",
+                        "type": "integer",
+                        "description": "App ID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -933,7 +933,8 @@
                     "example": "商城商品"
                 },
                 "ord": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
@@ -1016,6 +1017,10 @@
                 },
                 "ord": {
                     "type": "integer"
+                },
+                "sd_param": {
+                    "type": "string",
+                    "example": "{\"width\":512,\"height\":512}"
                 },
                 "tips": {
                     "type": "string",
